--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="client-js ve-not-available" lang="en" dir="ltr" data-ember-extension="1"><head>
 <meta charset="UTF-8">
 <title>Queen of England - Wikipedia</title>
